--- a/_posts/htb/starting-point/2022-02-27-Meow.md
+++ b/_posts/htb/starting-point/2022-02-27-Meow.md
@@ -9,14 +9,14 @@ permalink: /htb/meow/
 
 We just need to connect with telnet. The user will be root, with no password.
 {% highlight plain %}
-> telnet 10.129.53.229
-> Meow login: root
+$ telnet 10.129.53.229
+$ Meow login: root
 {% endhighlight %}
 
 # [](#header-4)Flag
 
 Then we will have the flag just there.
 {% highlight plain %}
-> ls
-> cat flag.txt
+$ ls
+$ cat flag.txt
 {% endhighlight %}
