--- a/_posts/htb/starting-point/2022-03-06-Oopsie.md
+++ b/_posts/htb/starting-point/2022-03-06-Oopsie.md
@@ -5,7 +5,7 @@ date: 2022-03-06
 permalink: /htb/oopsie/
 ---
 
-#header-4)Enumeration
+# [](header-4)Enumeration
 
 The nmap will show us:
 {% highlight plain %}
@@ -23,18 +23,18 @@ Nmap done: 1 IP address (1 host up) scanned in 7.95 seconds
 {% endhighlight %}
 
 If we search the ip in the Firefox we can access to a webpage:
-![webpage](./img/Screenshot_3.jpg)
+![](./img/Screenshot_3.jpg)
 
 Now we can set Firefox to listen to **Burp Suite**:
-![proxy](./img/Screenshot_4.jpg)
+![](./img/Screenshot_4.jpg)
 
 In the Burp Suite app we can see there is a login:
-![webpage](./img/Screenshot_5.jpg)
+![](./img/Screenshot_5.jpg)
 
 # [](#header-4)Foothold
 
 Now we have access to the login page:
-![webpage](./img/Screenshot_6.jpg)
+![](./img/Screenshot_6.jpg)
 
 We can see we need super admin privilages to get access to the super admin account:
 ![webpage](./img/Screenshot_7.jpg)
