--- a/_posts/htb/starting-point/2022-03-06-Oopsie.md
+++ b/_posts/htb/starting-point/2022-03-06-Oopsie.md
@@ -23,30 +23,30 @@ Nmap done: 1 IP address (1 host up) scanned in 7.95 seconds
 {% endhighlight %}
 
 If we search the ip in the Firefox we can access to a webpage:
-![](./img/Screenshot_3.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_3.jpg" weight="100%" />
 
 Now we can set Firefox to listen to **Burp Suite**:
-![](./img/Screenshot_4.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_4.jpg" weight="100%" />
 
 In the Burp Suite app we can see there is a login:
-![](./img/Screenshot_5.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_5.jpg" weight="100%" />
 
 # [](#header-4)Foothold
 
 Now we have access to the login page:
-![](./img/Screenshot_6.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_6.jpg" weight="100%" />
 
 We can see we need super admin privilages to get access to the super admin account:
-![webpage](./img/Screenshot_7.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_7.jpg" weight="100%" />
 
 We can see the **id=2**.:
-![webpage](./img/Screenshot_8.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_8.jpg" weight="100%" />
 
 If we change to 1:
-![webpage](./img/Screenshot_9.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_9.jpg" weight="100%" />
 
 Now we can use those credentials to change the cookies:
-![webpage](./img/Screenshot_10.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_10.jpg" weight="100%" />
 
 We will upload a reverse shell in php and use gobuster to find where it is uploaded:
 {% highlight plain %}
