--- a/_posts/htb/starting-point/2022-03-06-Oopsie.md
+++ b/_posts/htb/starting-point/2022-03-06-Oopsie.md
@@ -2,7 +2,7 @@
 layout: post
 title: 'HTB | Oopsie'
 date: 2022-03-06
-permalink: /htb/oopsie/
+permalink: /htb/starting-point/oopsie/
 ---
 
 # [](header-4)Enumeration
