--- a/_posts/notes/other/2022-03-28-sources.md
+++ b/_posts/notes/other/2022-03-28-sources.md
@@ -33,6 +33,7 @@ permalink: /notes/other/sources/
 - [HackTricks](https://book.hacktricks.xyz/)
 - [SecurityZines](https://securityzines.com/)
 - [TheHackerRecipes](https://www.thehacker.recipes/)
+- [samsclass](https://samsclass.info/127/ED_2020.shtml)
 
 # [](#header-4)Resources
 - [VirusTotal](https://www.virustotal.com/gui/home/upload)
@@ -49,12 +50,20 @@ permalink: /notes/other/sources/
 - [HackMyVM](https://hackmyvm.eu/)
 - [XSS Pwnfunction](https://xss.pwnfunction.com/)
 - [Juice Shop](https://github.com/juice-shop/juice-shop)
+- [CTF Challenge](https://ctfchallenge.com/)
 
 # [](#header-4)Bug Bounty Hunter
 - [HackerOne](https://www.hackerone.com/)
 - [BugCrowd](https://bugcrowd.com/programs)
 - [Intigriti](https://www.intigriti.com/)
 - [Google](https://bughunters.google.com/)
+
+# [](#header-4)News
+- [DanielMiessler](https://danielmiessler.com/)
+- [TheHackerNews](https://thehackernews.com/)
+- [Wired](https://www.wired.com/category/security/)
+- [Securib](https://securib.ee/)
+
 
 # [](#header-4)Hmmm...
 - [Ransomwiki](https://darkfeed.io/ransomwiki/)
