--- a/_posts/notes/system/2022-04-24-ssh.md
+++ b/_posts/notes/system/2022-04-24-ssh.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 'Notes | SSH'
-permalink: /notes/services/ssh/
+permalink: /notes/system/ssh/
 ---
 
 # [](#header-4)Basic Access
