--- a/_posts/notes/web/2021-12-27-dorks.md
+++ b/_posts/notes/web/2021-12-27-dorks.md
@@ -45,3 +45,12 @@ This search for sites that can be vulnurable to injections
 - SQLiHunter (with dorks)
 - bingoo (linux)
 - exiftool (to check metadata)
+
+# [](#header-4)Examples
+
+## [](#header-4)WSO2 RCE exploit 
+- inurl:"/carbon/admin/login.jsp"
+- inurl:"/authenticationendpoint/login.do"
+- inurl:"devportal/apis"
+- intitle:"API Publisher- Login"
+- intitle:"WSO2 Management Console"
