--- a/_posts/notes/databases/2021-12-12-sqli.md
+++ b/_posts/notes/databases/2021-12-12-sqli.md
@@ -1,10 +1,16 @@
 ---
 layout: post
-title: 'Notes | SQLi'
+title: 'Notes | SQL'
 date: 2021-12-12
-permalink: /notes/databases/sqli/
+permalink: /notes/databases/sql/
 ---
 # [](#header-4)Basic access
+Maybe the database have the default login, we can try with:
+{% highlight plain %}
+> mysql -u root -h <ip>
+{% endhighlight %}
+
+# [](#header-4)Basic Injection
 
 If we can send a query to the database to log, we can do:
 {% highlight plain %}
@@ -29,6 +35,8 @@ We can check all the tables with this:
 ' union select null, 'test', from dual --
 {% endhighlight %}
 We need to use the same number of field from the tables, so we just need to keep trying adding new fields.
+
+We can try to catch the login request with burp and send the SQLi with it.
 
 # [](#header-4)Error Based
 When we see an SQL error in the page we can try to gather information of the web.
